k8s/05-product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: uts-iae
  labels: { app: product-service }
spec:
  replicas: 2
  selector:
    matchLabels: { app: product-service }
  template:
    metadata:
      labels: { app: product-service }
    spec:
      containers:
        - name: product-service
          image: uts-iae/product-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet: { path: /up, port: 8000 }
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /up, port: 8000 }
            initialDelaySeconds: 60
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: uts-iae
spec:
  selector: { app: product-service }
  ports:
    - port: 8000
      targetPort: 8000
